--- a/index.html
+++ b/index.html
@@ -195,10 +195,10 @@ adapting to emerging tech trends.</p>
                     <div class="text">My creative skills</div>
                     <ul>
     <li><strong>Languages:</strong> C, Python, JavaScript</li>
-    <li><strong>Tools:</strong> Git, Linux, Windows, DSA Problem Solving, AWS</li>
+    <li><strong>Tools:</strong> Git, Linux, Windows, Canva</li>
     <li><strong>Framework:</strong> Django</li>
     <li><strong>Technology:</strong> HTML, CSS, SQL, Google Firebase, API, FlutterFlow</li>
-    <li><strong>Cybersecurity:</strong> Metasploit, Pentesting, Kali Linux</li>
+    <li><strong>Cybersecurity:</strong> Metasploit, Kali Linux</li>
   </ul>
                 </div>
 
@@ -247,7 +247,7 @@ adapting to emerging tech trends.</p>
       <div class="exp-card">
         <h4>Full Stack Developer</h4>
         <p><strong>Company:</strong> Innovarsity</p>
-        <p><strong>Duration:</strong> 07/2024 – 08/2024</p>
+        <p><strong>Duration:</strong> 07/2024 – Present</p>
         <p><strong>Location:</strong> Chirala, A.P, India</p>
         <p><strong>Description:</strong> A company focused on innovative educational solutions</p>
         <ul>
@@ -258,9 +258,7 @@ adapting to emerging tech trends.</p>
       </div>
 
       <div class="exp-card">
-        <h4>App Developer</h4>
-        <p><strong>Company:</strong> Google Play</p>
-        <p><strong>Duration:</strong> 02/2024 – 09/2024</p>
+        <h4>Freelance App Developer</h4>
         <p><strong>Description:</strong> Platform for publishing and distributing mobile applications</p>
         <ul>
           <li>Published apps</li>
@@ -338,43 +336,36 @@ adapting to emerging tech trends.</p>
         <div class="max-width">
             <h2 class="title fadein">My Projects</h2>
             <div class="carousel owl-carousel">
+
+                <div class="card">
+                    <a href="https://github.com/rhemanth832/Discord_Clone.git" target="_blank" rel="noreferrer" title="Discord Clone">
+                        <div class="box">
+                            <img src="Discord_clone.png" alt="User Dashboard Panel">
+
+                        </div>
+                    </a>
+                    <a href="https://github.com/rhemanth832/Discord_Clone.git" target="_blank" rel="noreferrer" title="💬 Discord Clone – Made with Django">
+                        <h3>💬 Discord Clone – Made with Django</h3>
+                    </a>
+                    <p>Built a real-time chat platform using Django. Features include user authentication, chat room creation, message exchange, profile updates, and profile search.</p>
+                    <p>Skills: HTML, CSS, JavaScript, Django, SQL PostgreSQL, Git</p>
+                </div>
+
                 <div class="card">
                     <a href="https://cleaneatz.in/" target="_blank" rel="noreferrer" title="CleanEatz">
                         <div class="box">
-                            <img src="images\CleanEatz.png" alt="Healthy Food Website">
+                            <img src="cleaneatz.png" alt="Healthy Food Website">
 
                         </div>
                     </a>
                     <a href="https://cleaneatz.in/" target="_blank" rel="noreferrer" title="CleanEatz">
-                        <p>CleanEatz- A Healthy Food Website</p>
+                        <h3>CleanEatz: Healthy Eating Made Simple</h3>
                     </a>
+                    <p>Designed and developed a responsive website for ordering 
+healthy meals online.</p>
 
-                    <p>Html, CSS, JavaScript, React.js, Node.js</p>
+                    <p>Skills: Html, CSS, JavaScript, Django</p>
 
-                </div>
-                <div class="card">
-                    <a href="https://true-profile-f4dpv3.flutterflow.app/" target="_blank" rel="noreferrer" title="TrueProfile">
-                        <div class="box">
-                            <img src="images\1.trueprofile-png.png" alt="User Dashboard Panel">
-
-                        </div>
-                    </a>
-                    <a href="https://true-profile-f4dpv3.flutterflow.app/" target="_blank" rel="noreferrer" title="TrueProfile-A Fake Profile Detection App">
-                        <p>A Fake Profile Detection App Prototype</p>
-                    </a>
-
-                    <p>Html, CSS, FlutterFlow</p>
-                </div>
-                <div class="card">
-                    <a href="https://afflux.flutterflow.app/" target="_blank" rel="noreferrer" title="AffluX">
-                        <div class="box">
-                            <img src="images\Afflux - Copy.jpg" alt="AffluX- A Personal Health Assistant">
-
-                        </div>
-                    </a>
-                    <a href="https://afflux.flutterflow.app/" target="_blank" rel="noreferrer" title="AffluX- A Personal Health Assistant">
-                        <p>AffluX- A Personal Health Assistant</p>
-                    </a>
                 </div>
                 <div class="card">
                     <a href="https://health-bot-v1xngi.flutterflow.app/" target="_blank" rel="noreferrer" title="AffluX">
@@ -384,9 +375,43 @@ adapting to emerging tech trends.</p>
                         </div>
                     </a>
                     <a href="https://health-bot-v1xngi.flutterflow.app/" target="_blank" rel="noreferrer" title="HealthBot - A Personal Health Assistant">
-                        <p>HealthBot - Your Personal Health Assistant</p>
+                        <h3>HealthBot - Your Personal Health Assistant</h3>
                     </a>
+                    <p>Built an AI-powered chatbot that provides health-related 
+guidance including disease info, diet plans, exercise 
+suggestions through NLP.</p>
+                    <p>Skills: HTML, CSS, JavaScript, Django Flutter, NLP, AI Integration</p>
                 </div>
+
+                
+                <div class="card">
+                    <a href="https://true-profile-f4dpv3.flutterflow.app/" target="_blank" rel="noreferrer" title="TrueProfile">
+                        <div class="box">
+                            <img src="images\1.trueprofile-png.png" alt="User Dashboard Panel">
+
+                        </div>
+                    </a>
+                    <a href="https://true-profile-f4dpv3.flutterflow.app/" target="_blank" rel="noreferrer" title="TrueProfile-A Fake Profile Detection App">
+                        <h3>TrueProfile: A Fake Profile Detection App Prototype</h3>
+                    </a>
+                    <p>Developed a prototype for True-Profile, a fake profile detection system that uses facial recognition and phone number verification to ensure secure user interactions.</p>
+
+                    <p>Skills: HTML, CSS, Django, Flutter, Firebase</p>
+                </div>
+                <div class="card">
+                    <a href="https://afflux.flutterflow.app/" target="_blank" rel="noreferrer" title="AffluX">
+                        <div class="box">
+                            <img src="images\Afflux - Copy.jpg" alt="AffluX- A Personal Health Assistant">
+
+                        </div>
+                    </a>
+                    <a href="https://afflux.flutterflow.app/" target="_blank" rel="noreferrer" title="AffluX- A Personal Health Assistant">
+                        <h3>AffluX- A Personal Health Assistant</h3>
+                    </a>
+                    <p>Built an AI-powered personal health assistant that provides users with tailored health advice, medication reminders, and wellness tips.</p>
+                    <p>Skills: HTML, CSS, JavaScript, Flutter, NLP, AI Integration, Firebase</p>
+                </div>
+                
             </div>
         </div>
     </section>
