--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@ adapting to emerging tech trends.</p>
                 <div class="column left">
                     <div class="text">My creative skills</div>
                     <ul>
-    <li><strong>Languages:</strong> C, Python, JavaScript</li>
-    <li><strong>Tools:</strong> Git, Linux, Windows, Canva</li>
+    <li><strong>Languages:</strong> C, Python, JavaScript, Bash</li>
+    <li><strong>Tools:</strong>  Git, Linux, Windows</li>
     <li><strong>Framework:</strong> Django</li>
-    <li><strong>Technology:</strong> HTML, CSS, SQL, Google Firebase, API, FlutterFlow</li>
-    <li><strong>Cybersecurity:</strong> Metasploit, Kali Linux</li>
+    <li><strong>Technology:</strong> HTML, CSS, MySQL, Google Firebase, REST API, FlutterFlow</li>
+    <li><strong>Cybersecurity:</strong>Kali Linux, Metasploit, Wireshark, Burp Suite, NMAP</li>
   </ul>
                 </div>
 
@@ -247,7 +247,7 @@ adapting to emerging tech trends.</p>
       <div class="exp-card">
         <h4>Full Stack Developer</h4>
         <p><strong>Company:</strong> Innovarsity</p>
-        <p><strong>Duration:</strong> 07/2024 – Present</p>
+        <p><strong>Duration:</strong> 07/2024 – 06/2025</p>
         <p><strong>Location:</strong> Chirala, A.P, India</p>
         <p><strong>Description:</strong> A company focused on innovative educational solutions</p>
         <ul>
@@ -277,7 +277,7 @@ adapting to emerging tech trends.</p>
     <div class="max-width">
         <h2 class="title fadein">Achievements</h2>
         <div class="text">Hackathons Participation</div>
-        <p>Participated in hackathons such as the Smart India Hackathon, T-Hub and Yukti Hackathon.</p>
+        <p>Participated in hackathons like Smart India Hackathon, T-Hub and Yukti Hackathon.</p>
     </div>
 </section>
 
@@ -345,7 +345,7 @@ adapting to emerging tech trends.</p>
                         </div>
                     </a>
                     <a href="https://github.com/rhemanth832/Discord_Clone.git" target="_blank" rel="noreferrer" title="💬 Discord Clone – Made with Django">
-                        <h3>💬 Discord Clone – Made with Django</h3>
+                        <h3>💬 Echo Room – A Real-Time Communication Platform for Modern Teams</h3>
                     </a>
                     <p>Built a real-time chat platform using Django. Features include user authentication, chat room creation, message exchange, profile updates, and profile search.</p>
                     <p>Skills: HTML, CSS, JavaScript, Django, SQL PostgreSQL, Git</p>
