--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@ adapting to emerging tech trends.</p>
                     <div class="text">My creative skills</div>
                     <ul>
     <li><strong>Languages:</strong> C, Python, JavaScript, Bash</li>
-    <li><strong>Tools:</strong>  Git, Linux, Windows</li>
+    <li><strong>Tools:</strong>  Git, Linux, Windows, FlutterFlow</li>
     <li><strong>Framework:</strong> Django</li>
-    <li><strong>Technology:</strong> HTML, CSS, MySQL, Google Firebase, REST API, FlutterFlow</li>
+    <li><strong>Technology:</strong> HTML, CSS, MySQL, Google Firebase, REST API</li>
     <li><strong>Cybersecurity:</strong>Kali Linux, Metasploit, Wireshark, Burp Suite, NMAP</li>
   </ul>
                 </div>
