--- a/index.html
+++ b/index.html
@@ -282,10 +282,10 @@
                             <div class="buttonmob">
                                 <div class="button1">
                                     <div class="icon">
-                                        <a href="https://x.com/rhemanth143" target="_blank" rel="noreferrer">
-                                            <i class="fab fa-twitter"></i>
+                                        <a href="https://www.hackerrank.com/profile/22jr1a43g9" target="_blank" rel="noreferrer">
+                                            <i class="fab fa-hackerrank"></i>
                                     </div>
-                                    <span>Twitter </a>
+                                    <span>HackerRank</a>
                               </span>
                                 </div>
                             </div>
@@ -329,13 +329,11 @@ adapting to emerging tech trends.</p>
                 <div class="column left">
                     <div class="text">My creative skills</div>
                     <ul>
-    <li><strong>Languages:</strong>C, Python, JavaScript, Bash</li>
-    <li><strong>Tools:</strong>Git, Linux, Windows, Metasploit, Kali Linux, Wireshark, 
-NMAP, Flutter Flow, Canva, Bubble</li>
+    <li><strong>Languages:</strong>C, Python, JavaScript</li>
+    <li><strong>Tools:</strong>Git, Linux, Windows, Metasploit, Kali Linux, NMAP, Flutter Flow, Canva, Bubble</li>
     <li><strong>Framework:</strong>Django</li>
-    <li><strong>Technology:</strong>HTML, CSS, MySQL, Google Firebase, Google Cloud, 
-REST API</li>
-    <li><strong>cybersecurity:</strong>Kali Linux, Wireshark, NMAP, Bash, Python</li>
+    <li><strong>Technology:</strong>HTML, CSS, MySQL, Google Firebase, Google Cloud</li>
+    <li><strong>cybersecurity:</strong>Kali Linux, NMAP, Python</li>
        </div>
 
                 <div class="column right">
@@ -725,10 +723,10 @@ suggestions through NLP.</p>
                             <div class="buttonmob">
                                 <div class="button1">
                                     <div class="icon">
-                                        <a href="https://x.com/rhemanth143" target="_blank" rel="noreferrer">
-                                            <i class="fab fa-twitter"></i>
+                                        <a href="https://www.hackerrank.com/profile/22jr1a43g9" target="_blank" rel="noreferrer">
+                                            <i class="fab fa-hackerrank"></i>
                                     </div>
-                                    <span>Twitter </a>
+                                    <span>HackerRank</a>
                               </span>
                                 </div>
                             </div>
