--- a/index.html
+++ b/index.html
@@ -329,11 +329,12 @@ adapting to emerging tech trends.</p>
                 <div class="column left">
                     <div class="text">My creative skills</div>
                     <ul>
-    <li><strong>Languages:</strong>C, Python, JavaScript</li>
-    <li><strong>Tools:</strong>Git, Linux, Windows, Metasploit, Kali Linux, NMAP, Flutter Flow, Canva, Bubble</li>
+    <li><strong>Languages:</strong>C, Python, JavaScript, Bash</li>
+    <li><strong>Tools:</strong>Git, Linux, Windows, Metasploit, Kali Linux, Wireshark, NMAP, Flutter Flow, Canva, Bubble</li>
     <li><strong>Framework:</strong>Django</li>
-    <li><strong>Technology:</strong>HTML, CSS, MySQL, Google Firebase, Google Cloud</li>
-    <li><strong>cybersecurity:</strong>Kali Linux, NMAP, Python</li>
+    <li><strong>Technology:</strong>HTML, CSS, MySQL, Google Firebase, Google Cloud, REST API</li>
+    <li><strong>cybersecurity:</strong>Git, Python, Bash, Linux, Metasploit, Kali Linux, Wireshark, NMAP</li>
+    <li><strong>Full Stack Development:</strong>HTML, CSS, JavaScript, Django, REST API, MySQL, Google Firebase, Git, Google Cloud, Canva, FlutterFlow, Bubble</li>
        </div>
 
                 <div class="column right">
