--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>Rasamsetty Hemanth's Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@coreui/icons@2.1.0/css/all.min.css">
+
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css" />
     <style>
         .education-content {
@@ -298,6 +301,18 @@
                                 <span>Github </a>
                            </span>
                             </div>
+
+                            <div class="buttonmob1"></div>
+                            <div class="button1">
+                                <div class="icon">
+                                    <a href="https://leetcode.com/u/rasamsettyhemanth/" target="_blank" rel="noreferrer">
+                                        <i class="cib-leetcode"></i>
+                                </div>
+                                <span>Leetcode </a>
+                           </span>
+                            </div>
+
+
                         </div>
                     </div>
                 </div>
@@ -305,16 +320,7 @@
                     <div class="text">I'm a Hemanth Rasamsetty and <span class="break">I'm a <span class="typing2"></span>
                         </span>
                     </div>
-                    <p> I'm Rasamsetty Hemanth, a passionate tech enthusiast 
-specializing in website development, cybersecurity, and no
-code application creation. I thrive on experimenting with new 
-technologies, embracing innovative ideas, and learning from 
-every experience. I've actively participated in numerous 
-internships, hackathons, and tech workshops. My notable project, 
-True-Profile, a fake profile detection system, currently has a 
-prototype and is in the patent application phase. I'm constantly 
-inspired by the rapid advancements in AI and committed to 
-adapting to emerging tech trends.</p>
+                    <p>I'm Rasamsetty Hemanth, a passionate tech enthusiast specializing in website development, cybersecurity, and no-code application creation. I thrive on experimenting with new technologies, embracing innovative ideas, and learning from every experience. I'm a Salesforce Developer (Agentforce) certified professional and have actively participated in numerous internships, hackathons, and tech workshops. My notable project, AI-Based Multi-Factor Biometric & Social Graph Profile Verification, has already been patented, showcasing my commitment to advancing innovative solutions. I am constantly inspired by the rapid advancements in AI and remain dedicated to adapting to emerging tech trends.</p>
                     </a>
                 </div>
             </div>
@@ -330,7 +336,7 @@ adapting to emerging tech trends.</p>
                     <div class="text">My creative skills</div>
                     <ul>
     <li><strong>Languages:</strong>C, Python, JavaScript, Bash</li>
-    <li><strong>Tools:</strong>Git, Linux, Windows, Metasploit, Kali Linux, Wireshark, NMAP, Flutter Flow, Canva, Bubble</li>
+    <li><strong>Tools:</strong>Git, Linux, Windows, Metasploit, Kali Linux, Salesforce Agentforce, Wireshark, NMAP, Flutter Flow, Canva, Bubble</li>
     <li><strong>Framework:</strong>Django</li>
     <li><strong>Technology:</strong>HTML, CSS, MySQL, Google Firebase, Google Cloud, REST API</li>
     <li><strong>cybersecurity:</strong>Git, Python, Bash, Linux, Metasploit, Kali Linux, Wireshark, NMAP</li>
@@ -339,6 +345,9 @@ adapting to emerging tech trends.</p>
 
                 <div class="column right">
                     <div class="info">
+                        <a href="https://www.salesforce.com/in/" target="_blank" rel="noreferrer">
+                            <img src="https://a.sfdcstatic.com/shared/images/c360-nav/salesforce-with-type-logo.svg" alt="Salesforce Agentforce" width="80" />
+                        </a>
                         <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank" rel="noreferrer">
                             <img src="./images/javascript.png" alt="javascript" width="80" />
                         </a>
@@ -383,7 +392,20 @@ adapting to emerging tech trends.</p>
 <section class="experience" id="experience">
   <div class="max-width">
     <h2 class="title fadein">Experience</h2>
+
     <div class="experience-content">
+      <div class="exp-card">
+        <h4> Salesforce Developer</h4>
+        <p><strong>Company:</strong> Salesforce</p>
+        <p><strong>Duration:</strong> 07/2025 – 08/2025</p>
+        <p><strong>Location:</strong> India</p>
+        <p><strong>Description:</strong> Salesforce – A leading cloud-based CRM platform that helps businesses manage customer relationships, automate workflows, and drive sales, service, and marketing efficiency.</p>
+        <ul>
+          <li> Experienced in building and customizing Salesforce solutions, automating workflows, and integrating CRM features for enhanced business efficiency.</li>
+          <p><a href="https://drive.google.com/file/d/1_jEXW85lbW1hyT_oJ-Kuje13Fxk7u9T3/view?usp=drive_link" target="_blank" rel="noreferrer" style="color: crimson; font-weight: bold;">📄 View Certification</a></p>
+
+        </ul>
+      </div>
 
       <div class="exp-card">
         <h4>Full Stack Developer</h4>
@@ -519,6 +541,9 @@ prevent fake profiles and improve trust in digital interactions.</em>
     <div class="max-width">
         <h2 class="title fadein">Certifications</h2>
         <div class="certifications-content">
+            <div class="cert-box">
+                <a href="https://drive.google.com/file/d/1_jEXW85lbW1hyT_oJ-Kuje13Fxk7u9T3/view?usp=drive_link" target="_blank">Salesforce Certified Agentforce Specialist</a> – By Salesforce
+            </div>
 
             <div class="cert-box">
                 <a href="https://www.credly.com/badges/da074a03-2fb1-4df7-89a2-efd6911146df/linked_in_profile" target="_blank">Google Cloud Computing Foundations Certificate</a> – By Google
@@ -740,6 +765,17 @@ suggestions through NLP.</p>
                                 <span>Github </a>
                            </span>
                             </div>
+
+                            <div class="buttonmob1"></div>
+                            <div class="button1">
+                                <div class="icon">
+                                    <a href="https://leetcode.com/u/rasamsettyhemanth/" target="_blank" rel="noreferrer">
+                                        <i class="cib-leetcode"></i>
+                                </div>
+                                <span>Leetcode </a>
+                           </span>
+                            </div>
+                            
                         </div>
                     </div>
                 </div>
