--- a/index.html
+++ b/index.html
@@ -353,11 +353,8 @@
                     <div class="text">My creative skills</div>
                     <ul>
     <li><strong>Languages:</strong>C, Python, JavaScript, Bash</li>
-    <li><strong>Tools:</strong>Git, Linux, Windows, Metasploit, Kali Linux, Salesforce Agentforce, Wireshark, NMAP, Flutter Flow, Canva, Bubble</li>
-    <li><strong>Framework:</strong>Django</li>
-    <li><strong>Technology:</strong>HTML, CSS, MySQL, Google Firebase, Google Cloud, REST API</li>
-    <li><strong>cybersecurity:</strong>Git, Python, Bash, Linux, Metasploit, Kali Linux, Wireshark, NMAP</li>
-    <li><strong>Full Stack Development:</strong>HTML, CSS, JavaScript, Django, REST API, MySQL, Google Firebase, Git, Google Cloud, Canva, FlutterFlow, Bubble</li>
+    <li><strong>Tools:</strong> GitHub, Windows, Salesforce, Metasploit, Kali Linux, Nmap, Flutter Flow, Canva, bubble.io, Google Firebase, AI</li>
+    <li><strong>Technology:</strong>Django, HTML, CSS, MySQL, Google Cloud</li>
        </div>
 
                 <div class="column right">
@@ -524,7 +521,7 @@
             <div class="edu-box">
                 <strong>Higher Secondary Education</strong><br>
                 Narayana Junior College, India<br>
-                01/2020 – 04/2022<br>
+                01/2021 – 04/2022<br>
                 <strong>Percentage:</strong> 67.2%
             </div>
             <div class="edu-box">
@@ -549,8 +546,7 @@
                 <em>Published in:</em> Controller General of Patents, Designs & Trade Marks (CGPDTM)
                 <em>Authors:</em> Rasamsetty Hemanth / Dr.Rasamsetty Bulli Babu / Dr.S.Radha Krishnan / Dr.G.Murali
                 <em>Patent Number:</em> 202541071961
-                <em> Patent: A patented AI-driven identity verification system that 
-combines government ID analysis, real-time facial recognition, 
+                <em> Patent: A patented AI-driven identity verification system that analysis, real-time facial recognition, 
 phone number validation, and social media API integration to 
 eliminate fake profiles and enable secure communication.</em>
                 <a href="https://drive.google.com/file/d/1HlRE9vnvzWpJQmam8To40UGxmT3kBHqU/view" target="_blank">📄 View Patent Paper</a>
@@ -657,7 +653,7 @@ prevent fake profiles and improve trust in digital interactions.</em>
                         <h3>Academia Share – Django-based Campus File Sharing System 📔</h3>
                     </a>
                     <p>Academia Share is a Django-based campus file-sharing repository built to simplify academic content exchange between teachers and students.</p>
-                    <p>Skills: HTML, CSS, JavaScript, Django, SQL PostgreSQL, Git</p>
+                    <p>Skills: HTML, CSS, JavaScript, Django, MySQL, Git</p>
                 </div>
 
                 <div class="card">
@@ -672,7 +668,7 @@ prevent fake profiles and improve trust in digital interactions.</em>
                         <h3>💬 Echo Room – A Real-Time Communication Platform for Modern Teams</h3>
                     </a>
                     <p>Built a real-time chat platform using Django. Features include user authentication, chat room creation, message exchange, profile updates, and profile search.</p>
-                    <p>Skills: HTML, CSS, JavaScript, Django, SQL PostgreSQL, Git</p>
+                    <p>Skills: HTML, CSS, JavaScript, Django, SQL, GitHub</p>
                 </div>
 
                 <div class="card">
@@ -687,7 +683,7 @@ prevent fake profiles and improve trust in digital interactions.</em>
                         <h3>Athanasius Hacking Framework</h3>
                     </a>
                     <p>Framework for penetration testing. The software can identify everything from cross-site scripting to SQL injection.</p>
-                    <p>Skills: Python, Bash, Linux,Git</p>
+                    <p>Skills: Python, Bash, Linux,GitHub</p>
                 </div>
 
 
@@ -720,7 +716,7 @@ healthy meals online.</p>
                     <p>Built an AI-powered chatbot that provides health-related 
 guidance including disease info, diet plans, exercise 
 suggestions through NLP.</p>
-                    <p>Skills: HTML, CSS, JavaScript, Django Flutter, NLP, AI Integration</p>
+                    <p>Skills: HTML, CSS, JavaScript, Django Flutter Flow, NLP, AI Integration</p>
                     <a href="https://github.com/rhemanth832/HealthBOT.git" target="_blank">Link to Download Apk</a>
             
                 </div>
@@ -738,7 +734,7 @@ suggestions through NLP.</p>
                     </a>
                     <p>Developed a prototype for True-Profile, a fake profile detection system that uses facial recognition and phone number verification to ensure secure user interactions.</p>
 
-                    <p>Skills: HTML, CSS, Django, Flutter, Firebase</p>
+                    <p>Skills: HTML, CSS, Django, Flutter Flow, Firebase</p>
                 </div>
                 <div class="card">
                     <a href="https://afflux.flutterflow.app/" target="_blank" rel="noreferrer" title="AffluX">
@@ -751,7 +747,7 @@ suggestions through NLP.</p>
                         <h3>AffluX- A Personal Health Assistant</h3>
                     </a>
                     <p>Built an AI-powered personal health assistant that provides users with tailored health advice, medication reminders, and wellness tips.</p>
-                    <p>Skills: HTML, CSS, JavaScript, Flutter, NLP, AI Integration, Firebase</p>
+                    <p>Skills: HTML, CSS, JavaScript, Flutter Flow, NLP, AI Integration, Firebase</p>
                 </div>
                 
             </div>
