--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
             <div class="edu-box">
                 <strong>Bachelor of Technology - BTech</strong><br>
                 KKR & KSR Institute of Technology & Sciences<br>
-                10/2022 – 07/2026, VINJANAMPADU Village<br>
+                10/2022 – 04/2026, VINJANAMPADU Village<br>
                 <strong>CGPA:</strong> 7.74 / 10 (Present)
             </div>
             <div class="edu-box">
@@ -683,13 +683,12 @@ prevent fake profiles and improve trust in digital interactions.</em>
 
                         </div>
                     </a>
-                    <a href="https://cleaneatz.in/" target="_blank" rel="noreferrer" title="CleanEatz">
+                    <a href="https://rhemanth832.github.io/Clean-Eatz/" target="_blank" rel="noreferrer" title="CleanEatz">
                         <h3>CleanEatz: Healthy Eating Made Simple</h3>
                     </a>
-                    <p>Designed and developed a responsive website for ordering 
-healthy meals online.</p>
+                    <p>Clean Eatz is a health food ordering website developed by Rasamsetty Hemanth during an internship at Innovarsity. It features meal browsing, nutrition details, cart & checkout, and responsive design</p>
 
-                    <p>Skills: Html, CSS, JavaScript, Django</p>
+                    <p>Skills: Html, CSS, JavaScript, MySQL</p>
 
                 </div>
                 <div class="card">
