--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
             <div class="home-content">
                 <div class="text-1">Hello 👋 I'm</div>
                 <div class="text-2">Rasamsetty Hemanth</div>
-                <div class="text-3">And I'm a <span class="typing"></span>
+                <div class="text-3">And I'm <span class="typing"></span>
                 </div>
                 <div>
                     <a href="https://www.linkedin.com/in/rasamsettyhemanth" target="_blank" rel="noreferrer">Find Me at <i class="fad fa-angle-right"></i>
@@ -677,7 +677,7 @@ prevent fake profiles and improve trust in digital interactions.</em>
 
 
                 <div class="card">
-                    <a href="https://cleaneatz.in/" target="_blank" rel="noreferrer" title="CleanEatz">
+                    <a href="https://rhemanth832.github.io/Clean-Eatz/" target="_blank" rel="noreferrer" title="CleanEatz">
                         <div class="box">
                             <img src="cleaneatz.png" alt="Healthy Food Website">
 
