--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
                     <div class="text">I'm a Hemanth Rasamsetty and <span class="break">I'm a <span class="typing2"></span>
                         </span>
                     </div>
-                    <p>I'm Rasamsetty Hemanth, a passionate tech enthusiast specializing in website development, cybersecurity, and no-code application creation. I thrive on experimenting with new technologies, embracing innovative ideas, and learning from every experience. I'm a Salesforce Developer (Agentforce) certified professional and have actively participated in numerous internships, hackathons, and tech workshops. My notable project, AI-Based Multi-Factor Biometric & Social Graph Profile Verification, has already been patented, showcasing my commitment to advancing innovative solutions. I am constantly inspired by the rapid advancements in AI and remain dedicated to adapting to emerging tech trends.</p>
+                    <p>I'm Rasamsetty Hemanth, a passionate tech enthusiast specializing in website development, cybersecurity, Salesforce Specialist and AI Expert. I thrive on experimenting with new technologies, embracing innovative ideas, and learning from every experience. I'm a Salesforce Developer (Agentforce) certified professional and have actively participated in numerous internships, hackathons, and tech workshops. My notable project, AI-Based Multi-Factor Biometric & Social Graph Profile Verification, has already been patented, showcasing my commitment to advancing innovative solutions. I am constantly inspired by the rapid advancements in AI and remain dedicated to adapting to emerging tech trends.</p>
                     </a>
                 </div>
             </div>
@@ -437,7 +437,7 @@
       <div class="exp-card">
         <h4> Salesforce Developer</h4>
         <p><strong>Company:</strong> Salesforce</p>
-        <p><strong>Duration:</strong> 07/2025 – 08/2025</p>
+        <p><strong>Duration:</strong> 01/2025 – 08/2025</p>
         <p><strong>Location:</strong> India</p>
         <p><strong>Description:</strong> Salesforce – A leading cloud-based CRM platform that helps businesses manage customer relationships, automate workflows, and drive sales, service, and marketing efficiency.</p>
         <ul>
@@ -450,24 +450,30 @@
       <div class="exp-card">
         <h4>Full Stack Developer</h4>
         <p><strong>Company:</strong> Innovarsity</p>
-        <p><strong>Duration:</strong> 07/2024 – 06/2025</p>
+        <p><strong>Duration:</strong> 07/2024 – 07/2025</p>
         <p><strong>Location:</strong> Chirala, A.P, India</p>
         <p><strong>Description:</strong> A company focused on innovative educational solutions</p>
         <ul>
-          <li>Built responsive web apps, increased UX engagement by 20%</li>
+          <li>Built responsive web applications, increased UX engagement by 20%</li>
           <p><a href="https://drive.google.com/file/d/1SQgbflem4Ua6ypQ3tz-EBR_S4FJiGUR7/view?usp=sharing" target="_blank" rel="noreferrer" style="color: crimson; font-weight: bold;">📄 View Offer Letter</a></p>
           <p><a href="https://cleaneatz.in" target="_blank" rel="noreferrer" style="color: crimson; font-weight: bold;">📄 View Completed Project</a></p>
         </ul>
       </div>
 
       <div class="exp-card">
-        <h4>Freelance App Developer</h4>
-        <p><strong>Description:</strong> Platform for publishing and distributing mobile applications</p>
+        <h4>Full Stack Web Developer using Django</h4>
+        <p><strong>Company:</strong> Innovarsity</p>
+        <p><strong>Duration:</strong> 03/2023 – 07/2024</p>
+        <p><strong>Location:</strong> India</p>
+        <p><strong>Description:</strong> A company focused on innovative solutions</p>
         <ul>
-          <li>Published apps</li>
-          <li>Integrated APIs, Firebase, and secure authentication systems</li>
+          <li>Built responsive web applications, increased UX engagement by 30%</li>
+          <p><a href="https://drive.google.com/file/d/1DMwE-TV6TnNmzQzopd2iMEohUvYpvOfG/view" target="_blank" rel="noreferrer" style="color: crimson; font-weight: bold;">📄 View Offer Letter</a></p>
+          <p><a href="https://drive.google.com/file/d/1bhCs8cx-0r4NDb5IRR8Pi2U9KfII-JUY/view" target="_blank" rel="noreferrer" style="color: crimson; font-weight: bold;">📄 View Certificate</a></p>
         </ul>
       </div>
+
+      
 
     </div>
   </div>
